--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pbkdf2": "^3.1.2",
     "pg": "^8.7.3",
     "swedish-personal-identity-number-validator": "^2.1.1",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.5.1"
   },
   "devDependencies": {
     "eslint": "^8.8.0",
