--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "cross-env NODE_ENV=development && node node_modules/nodemon/bin/nodemon.js src/server",
-    "start": "cross-env NODE_ENV=production && node node_modules/nodemon/bin/nodemon.js src/server"
+    "start": "cross-env NODE_ENV=production && node node_modules/nodemon/bin/nodemon.js src/server",
+	  "escheck": "cross-env NODE_ENV=development && node node_modules/eslint/bin/eslint -c .eslintrc.json --ignore-path .gitignore .",
+	  "esfix": "cross-env NODE_ENV=development && node node_modules/eslint/bin/eslint -c .eslintrc.json --ignore-path .gitignore --fix ."
   },
   "author": "",
   "license": "GPL-3.0",
