Fixed a problem in the controller, changed the CORS host to be fetched from env variable, fixed auth cookie problem
Fixed a problem in the controller, changed the CORS host to be fetched from env variable, fixed auth cookie problem to allow cookie setting from different hosts (Needed for google chrome)

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ JWT_SECRET=
 
 # The global salt used with PBKDF2
 GLOBAL_SALT=
+
+# The React webapp host url (e.g: https://secure-waters-40523.herokuapp.com)
+CORS_HOST=
